--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo installing dependencies...
-      - apt-get update
+      - yum update -y
   pre_build:
     commands:
       - echo build started...
