--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,27 @@ phases:
     commands:
       - echo installing dependencies...
       - yum update -y
+      - echo Installing curl...
+      - yum install -y curl
   pre_build:
     commands:
-      - echo build started...
+      - echo pre-build started...
+      - echo checking disk space
+      - df -h
+
+  build:
+    commands:
+      - echo Build Started...
+      - Creating a directory for build artifacts...
+      - mkdir -p build_artifacts
       - echo Hello, Codebuild!
+      - echo creating a simple text file...
+      - echo 'Sample File Content" > build_artifacts/simple.txt
   post_build:
     commands:
       - echo Post-build started...
+      - echo listening contents of build_artifacts directory...
+      - ls -l build_artifacts/
+      - echo cleaning up temporary files...
+      - rm -rf build_artifacts/
       
