--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo installing dependencies...
       - yum update -y
       - echo Installing curl...
-      - yum install -y curl
+      - dnf install -y curl
   pre_build:
     commands:
       - echo pre-build started...
