--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
     commands:
       - echo Post-build started...
       - echo listening contents of build_artifacts directory...
-      - ls -l build_artifacts/
+      - ls -la build_artifacts/
       - echo cleaning up temporary files...
       - rm -rf build_artifacts/
       
