--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
   build:
     commands:
       - echo Build Started...
-      - Creating a directory for build artifacts...
+      - echo Creating a directory for build artifacts...
       - mkdir -p build_artifacts
       - echo Hello, Codebuild!
       - echo creating a simple text file...
